<resources>
    <string name="app_name">tipCalculator</string>
    <string name="tip_calculator_label">Tip Calculator</string>
    <string name="calculateButton">Calculate</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percentage_sign">Tip %</string>
    <string name="split">Split:</string>
    <string name="split_tip">Split tip:</string>
    <string name="InitialAmount_0">$0.00</string>
    <string name="split_total">Split Total:</string>
    <string name="total">Total:</string>
    <string name="total_num"> %.2f </string>
    <string name="tipSplit_num"> %.2f</string>
    <string name="totalSplit_num"> %.2f </string>
    <string name="dollaSIgn">$</string>
    <string name="percentSign">%</string>
    <string name="enter_split_number">Enter split number</string>
</resources>